Add Gitea deployment, service, and ingress configuration to Kustomization

--- a/infra/traefik/overlays/homelab/values.yaml
+++ b/infra/traefik/overlays/homelab/values.yaml
@@ -6,3 +6,10 @@ ingressRoute:
 logs:
   general:
     level: INFO
+ports:
+  web:
+    forwardedHeaders:
+      insecure: true
+  websecure:
+    forwardedHeaders:
+      insecure: true
