--- a/apps/base/gitea.yaml
+++ b/apps/base/gitea.yaml
@@ -29,13 +29,14 @@ spec:
             - name: GITEA__database__PATH
               value: /data/gitea/gitea.db
             - name: GITEA__server__ROOT_URL
-              value: http://gitea.local:5000/
+              value: https://gitea.local/
           volumeMounts:
             - name: gitea-data
               mountPath: /data
       volumes:
         - name: gitea-data
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: gitea-data
 ---
 apiVersion: v1
 kind: Service
@@ -76,3 +77,17 @@ spec:
                 name: gitea
                 port:
                   name: http
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: gitea-data
+  namespace: apps
+  labels:
+    app: gitea
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
